tests/NormalTests/paczka1/fuzzy1/92337513.err
Error in line 1: e5atcRysi S713 28,2
Error in line 2: FzM S713 54,9
Error in line 21: Y8AFR2 A918 90,2
Error in line 15: S511 A13 47,1
Error in line 30: 40rVOf S713 49,0
Error in line 37: Y8AFR2 S713 44,9
